--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
-body {
-    background-color: pink;
+.secret-code {
+    background-color: green;
+}
+
+.secret-code-square {
+    width: 20px;
+    height: 20px;
+    background-color: red;
 }
