--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,49 @@
-.secret-code {
-    background-color: green;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;700&display=swap');
+
+/* Box model credit to czechitas.cz */
+html {
+    box-sizing: border-box;
 }
 
-.secret-code-square {
+*,
+::after,
+::before {
+    box-sizing: inherit;
+}
+
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+/*
+   Colors
+   dark-blue: #162450
+   light-blue: #1E91D6
+   green: #8FC93A
+   yellow: #E4CC37
+   orange: #E18335   
+   
+   FONTS
+   Noto Sans - light 300, regular 400, bold 700
+   https://fonts.google.com/noto/specimen/Noto+Sans
+  */
+
+
+header {
+    background-color: #E4CC37;
+}
+
+/* .secret-code-square {
     width: 20px;
     height: 20px;
     background-color: red;
-}
+} */
