--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ body {
    https://fonts.google.com/noto/specimen/Noto+Sans
   */
 
-
+/* header section */
 header {
     background-color: #E4CC37;
     padding: 0.5rem 5%;
@@ -86,6 +86,7 @@ header {
     text-align: center;
 }
 
+/* score section */
 #ctn-score {
     background-color: #8FC93A;
     padding: 0 5%;
@@ -94,16 +95,78 @@ header {
     font-weight: 600;
 }
 
+/* playgroung section */
 #ctn-playground {
-    background-color: #162450;
+    background-color: #E4CC37;
+    display: flex;
+    justify-content: center;
 }
 
+#ctn-squares-grid {
+    width: 220px;
+    height: 420px;
+    padding: 5%;
+    background-color: #162450;
+    display: grid;
+    grid-gap: 0.2rem 0.2rem;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(12, 1fr);
+    align-items: center;
+    justify-items: center;
+    /* gap: 0.5rem; */
+    /* box-sizing: border-box; */
+}
+
+.square {
+    width: 25px;
+    height: 25px;
+    background-color: #D9D9D9;
+    border: #8FC93A;
+    border-radius: 5px;
+}
+
+#ctn-circles-grid {
+    width: 140px;
+    height: 420px;
+    padding: 5%;
+    background-color: #162450;
+    display: grid;
+    align-items: center;
+    grid-gap: 0.2rem 0.2rem;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(12, 1fr);
+    align-items: center;
+    justify-items: center;
+}
+
+.circle {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #D9D9D9;
+    border: #8FC93A;
+}
+
+/* Options section */
 #ctn-options {
     background-color: #E4CC37;
 }
 
-/* .secret-code-square {
-    width: 20px;
-    height: 20px;
-    background-color: red;
-} */
+#second-heading {
+    text-align: center;
+    font-size: 18px;
+}
+
+#ctn-colors {
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
+}
+
+#buttons {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    gap: 5rem;
+    padding: 5%;
+}
