--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-color: #E4CC37;
+    background-color: #fff;
 }
 
 
@@ -42,7 +42,7 @@ body {
 
 /* header section */
 header {
-    background-color: #E4CC37;
+    background-color: #fff;
     padding: 0.5rem 5%;
     margin: 0;
 }
@@ -70,7 +70,7 @@ header {
     width: 25px;
     height: 25px;
     /* border: black solid 2px; */
-    border-radius: 2px;
+    border-radius: 5px;
     text-align: center;
     background-color: #D9D9D9;
 }
@@ -159,7 +159,7 @@ header {
 
 /* Options section */
 #ctn-options {
-    background-color: #E4CC37;
+    background-color: #fff;
 }
 
 #second-heading {
@@ -210,6 +210,7 @@ button {
     #ctn-circles-grid {
         width: 320px;
         height: 620px;
+        grid-gap: 1rem 1rem;
     }
 
     .circle {
@@ -227,8 +228,29 @@ button {
 
 
 @media (min-width: 800px) {
+    body {
+        width: 840px;
+        height: auto;
+        margin: auto auto;
+    }
+
+    header {
+        padding: 5%;
+    }
+
     .main-heading {
         font-size: 180%;
+        padding-bottom: 5%;
+    }
+
+    .secret-code-square {
+        width: 40px;
+        height: 40px;
+    }
+
+    .fa-key {
+        font-size: 200%;
+        padding-top: 5px;
     }
 
     #ctn-squares-grid {
