--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,6 @@ header {
 .main-heading {
     margin: 0;
     font-size: 20px;
-    /* font-size: 90%; */
     text-align: center;
 }
 
@@ -60,7 +59,6 @@ header {
     gap: 2rem;
 }
 
-
 #ctn-secret-code {
     display: flex;
     gap: 0.5rem;
@@ -69,7 +67,6 @@ header {
 .secret-code-square {
     width: 25px;
     height: 25px;
-    /* border: black solid 2px; */
     border-radius: 5px;
     text-align: center;
     background-color: #D9D9D9;
@@ -90,8 +87,6 @@ header {
 
 /* score section */
 #ctn-score {
-    background-color: #8FC93A;
-    /* margin: 0; */
     padding: 0 5%;
     display: flex;
     justify-content: center;
@@ -106,47 +101,35 @@ header {
 
 /* playgroung section */
 #ctn-playground {
-    background-color: #162450;
-    ;
+    padding: 1rem;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
 }
 
-#ctn-squares-grid {
-    width: 220px;
-    height: 420px;
-    padding: 5%;
-    background-color: #162450;
-    display: grid;
-    grid-gap: 0.2rem 0.2rem;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(12, 1fr);
+.row {
+    display: flex;
+}
+
+.square-row {
+    display: flex;
     align-items: center;
-    justify-items: center;
-    /* gap: 0.5rem; */
-    /* box-sizing: border-box; */
+    gap: 0.5rem;
+    padding-right: 2rem;
+}
+
+.circle-row {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
 }
 
 .square {
     width: 25px;
     height: 25px;
     background-color: #D9D9D9;
-    border: #8FC93A;
     border-radius: 5px;
-}
-
-#ctn-circles-grid {
-    width: 140px;
-    height: 420px;
-    padding: 5%;
-    background-color: #162450;
-    display: grid;
-    align-items: center;
-    grid-gap: 0.2rem 0.2rem;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(12, 1fr);
-    align-items: center;
-    justify-items: center;
 }
 
 .circle {
@@ -154,14 +137,9 @@ header {
     height: 10px;
     border-radius: 50%;
     background-color: #D9D9D9;
-    border: #8FC93A;
 }
 
 /* Options section */
-#ctn-options {
-    background-color: #fff;
-}
-
 #second-heading {
     text-align: center;
     font-size: 18px;
@@ -196,21 +174,9 @@ button {
         font-size: 140%;
     }
 
-    #ctn-squares-grid {
-        width: 320px;
-        height: 620px;
-        grid-gap: 1rem 1rem;
-    }
-
     .square {
         width: 30px;
         height: 30px;
-    }
-
-    #ctn-circles-grid {
-        width: 320px;
-        height: 620px;
-        grid-gap: 1rem 1rem;
     }
 
     .circle {
@@ -253,21 +219,9 @@ button {
         padding-top: 5px;
     }
 
-    #ctn-squares-grid {
-        width: 320px;
-        height: 680px;
-        grid-gap: 1rem 1rem;
-    }
-
     .square {
         width: 35px;
         height: 35px;
-    }
-
-    #ctn-circles-grid {
-        width: 320px;
-        height: 680px;
-        grid-gap: 1rem 1rem;
     }
 
     .circle {
