--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,12 +17,13 @@ body {
     padding: 0;
     font-family: 'Noto Sans', sans-serif;
     font-size: 16px;
+    /* color: white; */
     font-weight: 400;
     line-height: 1.5;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-color: #fff;
+    background-color: #008822;
 }
 
 
@@ -42,7 +43,7 @@ body {
 
 /* header section */
 header {
-    background-color: #fff;
+    /* background-color: #fff; */
     padding: 0.5rem 5%;
     margin: 0;
 }
