--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@ body {
     padding: 0;
     font-family: 'Noto Sans', sans-serif;
     font-size: 16px;
-    /* color: white; */
     font-weight: 400;
     line-height: 1.5;
     display: flex;
@@ -41,9 +40,40 @@ body {
    https://fonts.google.com/noto/specimen/Noto+Sans
   */
 
+/* welcome pop up window */
+#welcome-pop-up {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem 2rem;
+    font-size: 90%;
+    text-align: left;
+    border-radius: 10px;
+    border: solid 1px black;
+    margin: 0.5rem 1rem;
+    /* position: absolute; */
+    background-color: white;
+    /* max-height: 100vh; */
+}
+
+#welcome-pop-up h2 {
+    text-align: center;
+    font-size: 16px;
+    margin: 0rem;
+}
+
+.close {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    align-self: flex-end;
+    margin-right: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+
 /* header section */
 header {
-    /* background-color: #fff; */
     padding: 0.5rem 5%;
     margin: 0;
 }
@@ -139,7 +169,7 @@ header {
     height: 10px;
     border-radius: 50%;
     background-color: #D9D9D9;
-    border: solid 2px black;
+    border: solid 3px black;
 }
 
 /* Options section */
@@ -165,6 +195,9 @@ header {
 button {
     border-radius: 5px;
     font-weight: 700;
+    cursor: pointer;
+    /* border: none;
+    outline: none; */
 }
 
 /* media query for tablets */
@@ -199,6 +232,7 @@ button {
 @media (min-width: 800px) {
     body {
         width: 840px;
+        /* min-height: 100vh; */
         height: auto;
         margin: auto auto;
     }
