--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,12 +109,13 @@ header {
     gap: 0.5rem;
 }
 
-#rules {
+.fa-question {
     width: 25px;
     height: 25px;
-    border: black solid 2px;
-    border-radius: 50%;
     text-align: center;
+    padding-top: 0.1rem;
+    border-radius: 50%;
+    border: solid 2px black;
 }
 
 /* score section */
