--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ body {
   */
 
 /* welcome pop up window */
-#welcome-pop-up {
+.pop-up {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -171,6 +171,20 @@ header {
     border-radius: 50%;
     background-color: #D9D9D9;
     border: solid 3px black;
+}
+
+/* Winning pop up */
+#congrats-image {
+    max-width: 250px;
+    height: auto;
+}
+
+#wining-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    gap: 4rem;
+    padding: 5%;
 }
 
 /* Options section */
