--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;700&display=swap');
 
 /* Box model credit to czechitas.cz */
+/* html,
+body {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+} */
+
+
 html {
     box-sizing: border-box;
 }
@@ -14,6 +24,7 @@ html {
 
 body {
     margin: 0;
+    /* margin: auto auto; */
     padding: 0;
     font-family: 'Noto Sans', sans-serif;
     font-size: 16px;
@@ -74,12 +85,13 @@ body {
 
 /* header section */
 header {
-    padding: 0.5rem 5%;
+    padding: 0.5rem 1rem 0rem 0.5rem;
     margin: 0;
 }
 
 .main-heading {
     margin: 0;
+    padding: 0.5rem 0rem;
     font-size: 20px;
     text-align: center;
 }
@@ -120,7 +132,7 @@ header {
 
 /* score section */
 #ctn-score {
-    padding: 0 5%;
+    padding: 0 1rem;
     display: flex;
     justify-content: center;
     font-weight: 600;
@@ -129,12 +141,12 @@ header {
 
 #ctn-score p {
     margin: 0;
-    padding: 2.5% 5%;
+    padding: 1rem;
 }
 
 /* playgroung section */
 #ctn-playground {
-    padding: 1rem;
+    padding: 0, 5rem 1rem 0rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -204,7 +216,7 @@ header {
 /* Options section */
 #second-heading {
     text-align: center;
-    font-size: 18px;
+    font-size: 110%;
 }
 
 #ctn-colors {
@@ -232,11 +244,40 @@ button {
 /* media query for tablets */
 @media (min-width: 440px) {
     .main-heading {
-        font-size: 160%;
+        font-size: 120%;
     }
 
-    #ctn-score p {
+    #second-heading,
+    button {
+        font-size: 120%;
+    }
+}
+
+
+
+@media (min-width: 800px) {
+    body {
+        width: 840px;
+        margin: auto auto;
+    }
+
+    header {
+        padding-top: 1rem;
+    }
+
+    .main-heading {
         font-size: 140%;
+        /* padding-bottom: 5%; */
+    }
+
+    .secret-code-square {
+        width: 35px;
+        height: 35px;
+    }
+
+    .fa-key {
+        font-size: 140%;
+        padding-top: 5px;
     }
 
     .square {
@@ -247,51 +288,5 @@ button {
     .circle {
         width: 15px;
         height: 15px;
-        grid-gap: 1rem 1rem;
-    }
-
-    #second-heading,
-    button {
-        font-size: 140%;
-    }
-}
-
-
-
-@media (min-width: 800px) {
-    body {
-        width: 840px;
-        /* min-height: 100vh; */
-        height: auto;
-        margin: auto auto;
-    }
-
-    header {
-        padding: 5%;
-    }
-
-    .main-heading {
-        font-size: 180%;
-        padding-bottom: 5%;
-    }
-
-    .secret-code-square {
-        width: 40px;
-        height: 40px;
-    }
-
-    .fa-key {
-        font-size: 200%;
-        padding-top: 5px;
-    }
-
-    .square {
-        width: 35px;
-        height: 35px;
-    }
-
-    .circle {
-        width: 20px;
-        height: 20px;
     }
 }
