--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ header {
     display: flex;
     justify-content: center;
     font-weight: 600;
-    gap: 4rem;
+    gap: 3.5rem;
 }
 
 #ctn-score p {
@@ -178,11 +178,11 @@ header {
 }
 
 .circle {
-    width: 10px;
-    height: 10px;
+    width: 15px;
+    height: 15px;
     border-radius: 50%;
     background-color: #D9D9D9;
-    border: solid 3px black;
+    /* border: solid 2px black; */
 }
 
 #you-won-pop-up {
@@ -267,12 +267,11 @@ button {
 
     .main-heading {
         font-size: 140%;
-        /* padding-bottom: 5%; */
     }
 
     .secret-code-square {
-        width: 35px;
-        height: 35px;
+        width: 30px;
+        height: 30px;
     }
 
     .fa-key {
@@ -280,9 +279,13 @@ button {
         padding-top: 5px;
     }
 
+    #ctn-score p {
+        padding: 0.5rem;
+    }
+
     .square {
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
     }
 
     .circle {
