--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,8 @@ body {
     line-height: 1.5;
     display: flex;
     flex-direction: column;
+    /* justify-content: center;
+    align-items: center; */
     min-height: 100vh;
     background-color: white;
 }
@@ -242,7 +244,7 @@ button {
 }
 
 /* media query for tablets */
-@media (min-width: 440px) {
+@media screen and (min-width: 440px) {
     .main-heading {
         font-size: 120%;
     }
@@ -255,10 +257,12 @@ button {
 
 
 
-@media (min-width: 800px) {
+@media screen and (min-width: 750px) {
     body {
-        width: 840px;
+        width: 700px;
         margin: auto auto;
+        justify-content: center;
+        align-items: center;
     }
 
     header {
@@ -284,8 +288,8 @@ button {
     }
 
     .square {
-        width: 25px;
-        height: 25px;
+        width: 30px;
+        height: 30px;
     }
 
     .circle {
