feat: Set up the Initial state
This unifies initialization, play again and restart events

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,7 @@ header {
     padding: 1rem;
 }
 
-/* playgroung section */
+/* playground section */
 #ctn-playground {
     padding: 0, 5rem 1rem 0rem 1rem;
     display: flex;
