--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,13 @@ body {
     background-color: white;
 }
 
+.fa-music {
+    cursor: pointer;
+}
+
+.fa-question {
+    cursor: pointer;
+}
 
 /*
    Colors
