--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ body {
     align-items: center;
     padding: 1rem 2rem;
     font-size: 90%;
-    text-align: left;
+    text-align: center;
     border-radius: 10px;
     border: solid 1px black;
     margin: 0.5rem 1rem;
