--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,8 +126,8 @@ header {
 }
 
 .secret-code-square {
-    width: 25px;
-    height: 25px;
+    width: 1.5em;
+    height: 1.5em;
     border-radius: 5px;
     text-align: center;
     background-color: #D9D9D9;
@@ -139,8 +139,8 @@ header {
 }
 
 .fa-question {
-    width: 25px;
-    height: 25px;
+    width: 1.5em;
+    height: 1.5em;
     text-align: center;
     padding-top: 0.1rem;
     border-radius: 50%;
@@ -188,18 +188,17 @@ header {
 }
 
 .square {
-    width: 25px;
-    height: 25px;
+    width: 1.5em;
+    height: 1.5em;
     background-color: #D9D9D9;
     border-radius: 5px;
 }
 
 .circle {
-    width: 15px;
-    height: 15px;
+    width: 1em;
+    height: 1em;
     border-radius: 50%;
     background-color: #D9D9D9;
-    /* border: solid 2px black; */
 }
 
 #you-won-pop-up {
@@ -300,9 +299,10 @@ button:hover {
         font-size: 140%;
     }
 
-    .secret-code-square {
-        width: 30px;
-        height: 30px;
+    .secret-code-square,
+    .square {
+        width: 1.7em;
+        height: 1.7em;
     }
 
     .fa-key {
@@ -316,13 +316,9 @@ button:hover {
         padding: 0.5rem;
     }
 
-    .square {
-        width: 30px;
-        height: 30px;
-    }
 
     .circle {
-        width: 15px;
-        height: 15px;
+        width: 1.2em;
+        height: 1.2em;
     }
 }
