--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,12 @@ header {
     border: solid 2px black;
 }
 
+#music-stop {
+    display: none;
+    width: 1.5em;
+    height: 1.5em;
+}
+
 /* score section */
 #ctn-score {
     padding: 0 1rem;
